# MCModCrafter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MCModCrafter.sln  README.md
MCModCrafter/: MCModCrafter.cpp  MCModCrafter.h  MCModCrafter.rc  MCModCrafter.ui  MCModCrafter.vcxproj  MCModCrafter.vcxproj.filters  main.cpp
pysrc/: pluginscan.py
pysrc/mcmod/: __init__.py  logger.py
pysrc/mcmodplugin/: __init__.py  create_project_download_forge.py
pysrc/mcmodplugin/create_project/: __init__.py  download_forge.py  extract_forge.py  setup_decomp_workspace.py  setup_dirs.py
pysrc/mcmodplugin/helper/: gradle_helper.py
pysrc/mcmodplugin/init/: __init__.py  parse_java_source.py
src/: ConfigBase.cpp  ConfigBase.h  DialogCreateProject.cpp  DialogCreateProject.h  FileDownloader.cpp  FileDownloader.h  ProjectConfig.cpp  ProjectConfig.h  RuntimeConfig.cpp  RuntimeConfig.h  WidgetSelectProject.h  WindowMCModCrafter.cpp  WindowMCModCrafter.h  ZipUtil.cpp  ZipUtil.h  main.cpp  stdafx.cpp  stdafx.h
src/forms/: DialogCreateProject.ui  PluginStatusWidget.ui  WidgetPluginStatus.ui  WidgetProjectSetup.ui  WidgetSelectProject.ui  WindowMCModCrafter.ui
src/pyplugin/: AcquireGIL.cpp  AcquireGIL.h  MCModInternalModule.cpp  PluginManager.cpp  PluginManager.h  PyLogger.cpp  PyLogger.h  PyPlugin.cpp  PyPlugin.h  PyThread.cpp  PyThread.h  SyntaxNodeType.cpp  SyntaxNodeType.h
src/res/: MCModCrafter.qrc  runtimeconfig.json
src/ui/: DialogCreateProject.cpp  DialogCreateProject.h  PluginStatusWidget.cpp  PluginStatusWidget.h  WidgetPluginStatus.cpp  WidgetPluginStatus.h  WidgetProjectSetup.cpp  WidgetProjectSetup.h  WidgetSelectProject.cpp  WidgetSelectProject.h  WindowMCModCrafter.cpp  WindowMCModCrafter.h
src/ui/nodes/: MasterNodeModel.cpp  MasterNodeModel.h
